@@ -1,3 +1,8 @@
+2016-07-12  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Source/GSICUString.m (UTextNSStringAccess): Fix unsigned
+	comparison to properly detect integer underflows.
+
 2016-07-06  Niels Grewe <niels.grewe@halbordnung.de>
 
 	* Tests/base/NSRegularExpression/basic.m: Test for -pattern
